syntax = "proto3";

option csharp_namespace = "Swisschain.Sirius.Brokerage.ApiContract";

import "common.proto";
import "google/protobuf/timestamp.proto";

package services;

service BrokerAccounts {
  rpc Create (CreateRequest) returns (CreateResponse);

  rpc AddBlockchain (AddBlockchainRequest) returns (AddBlockchainResponse);
}

message CreateRequest {
  string tenantId = 1;

  string requestId = 2;

  string name = 3;

  int64 vaultId = 4;

  repeated string blockchain_ids = 5;
}

message AddBlockchainRequest {
  string tenantId = 1;

  string requestId = 2;

  int64 broker_account_id = 3;

  repeated string blockchain_ids = 4;
}

message CreateResponseBody {
  
  int64 id = 1;

  string name = 2;

  BrokerAccountStatus status = 3;

  google.protobuf.Timestamp createdAt = 4;

  google.protobuf.Timestamp updatedAt = 5;

  int64 vaultId = 6;

  repeated string blockchain_ids = 7;

  enum BrokerAccountStatus {
    CREATING = 0;
    ACTIVE = 1;
    BLOCKED = 2;
  } 
}

message AddBlockchainResponseBody {
}

message CreateResponse {
   oneof body{
     CreateResponseBody response = 1;
     common.ErrorResponseBody error = 2;
   }
}

message AddBlockchainResponse {
  oneof body{
    AddBlockchainResponseBody response = 1;
    common.ErrorResponseBody error = 2;
  }
}